# ChangeLog for media-sound/audacious
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/audacious/ChangeLog,v 1.219 2011/01/04 00:32:22 xmw Exp $

  04 Jan 2011; Michael Weber <xmw@gentoo.org> audacious-2.2.ebuild,
  audacious-2.4.0.ebuild:
  sparc stable, dropping keywords (bug 297894)

*audacious-2.4.2 (07 Dec 2010)

  07 Dec 2010; <chainsaw@gentoo.org> audacious-2.2.ebuild,
  -audacious-2.3.ebuild, -audacious-2.4_rc3.ebuild, +audacious-2.4.2.ebuild:
  Third release on the 2.4 branch. Locale-encoded strings are now converted to
  UTF-8 properly.

  09 Nov 2010; Jeroen Roovers <jer@gentoo.org> audacious-2.4.0.ebuild:
  Stable for HPPA (bug #297894).

*audacious-2.4.1 (08 Nov 2010)

  08 Nov 2010; <chainsaw@gentoo.org> +audacious-2.4.1.ebuild:
  Version bump; various bug fixes.

  02 Nov 2010; Thomas Kahle <tomka@gentoo.org> audacious-2.4.0.ebuild:
  x86 stable per bug 297894

  02 Nov 2010; Mark Loeser <halcy0n@gentoo.org> audacious-2.4.0.ebuild:
  Stable for ppc64; bug #297894

  13 Oct 2010; Markos Chandras <hwoarang@gentoo.org> audacious-2.4.0.ebuild:
  Stable on amd64 wrt bug #297894

  26 Sep 2010; Tobias Klausmann <klausman@gentoo.org>
  audacious-2.4.0.ebuild:
  Stable on alpha, bug #297894

*audacious-2.4.0 (25 Aug 2010)

  25 Aug 2010; <chainsaw@gentoo.org> -audacious-2.4_rc2.ebuild,
  +audacious-2.4.0.ebuild:
  Final release. Audacious 2.4 is now officially perfect so we are going
  into 2.5 development. Thank you for the bug reports on JIRA.

*audacious-2.4_rc3 (23 Aug 2010)

  23 Aug 2010; <chainsaw@gentoo.org> -audacious-2.4_rc1.ebuild,
  +audacious-2.4_rc3.ebuild:
  One more release candidate. Translation updates, bugfixes, builds again on
  PowerPC. Closes bug #333365 by John Ross Hunt.

*audacious-2.4_rc2 (13 Aug 2010)

  13 Aug 2010; <chainsaw@gentoo.org> -audacious-2.4_beta1.ebuild,
  -audacious-2.4_beta2.ebuild, +audacious-2.4_rc2.ebuild: