@@ -1,11 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST audacious-2.2.tgz 1581717 RMD160 a8a3eb32f802ff45030971fceb21915386157177 SHA1 7b946830028f0d8a985107974094cd91b12b0259 SHA256 f15af7a90085e7be86f7f876a8e74a5ba03385880a165c4b2033944219213bea
 DIST audacious-2.4.0.tgz 1346549 RMD160 80868a21e436d05692300578274031557a2bd3c7 SHA1 4166d718ca5f3c5a39daea688e9a46975112e2c0 SHA256 f2a2d45b9cb8fc24c1c55aef72a3a397a9a35776c18a94532b1bd3238577d5d8
 DIST audacious-2.4.1.tgz 1344307 RMD160 37395b1bd43202a458e18c5be58e0c29c7e773b0 SHA1 e231be40fa5ec6a9ed9ac700798bda06c43c4ab4 SHA256 2c75e2365c6e1cf7cf9a563dd4db90cf75b85be3d6f22dd948c69bea9d4bb2da
 DIST audacious-2.4.2.tgz 1344152 RMD160 72677dcab2bc7098a3bd8c017d0261e0394fdfcb SHA1 a5875a52ae47213a900ef1ded8fe0db3cbd0efc7 SHA256 602c1421775ef8f88c0e22139ca6f63c76159e762ac2c36c5dd2fe13ac03ad0d
+DIST audacious-2.4.3.tgz 1344445 RMD160 2f0b9e398be22705640f432779c77105b0167801 SHA1 81fd26c9488c543beb4ba2900a667ed386e63ef3 SHA256 ea619d238b66f1e2018846880ec3971373013f82957f74c367310bdef3f4bc32
 DIST gentoo_ice-xmms-0.2.tar.bz2 51839 RMD160 11439cbebf8c6dc5745c8593a79e88303d094544 SHA1 e97ebbf204e0d1b150265f9e67f0ed54d779e110 SHA256 d1be63368b76f4a8b1d5b0e955cd7a77177f56a7f0b828c6603d8fd2836422b1
 EBUILD audacious-2.2.ebuild 1883 RMD160 48bfc97ffcdb2729692d4aac895869f247527dfb SHA1 d00e9a183164889eabaa1d1d25a5b768605f00ac SHA256 a709ac42c68c3fb1e0e6f87500083202a35a92c0dff54e7415152efd1955f3fc
 EBUILD audacious-2.4.0.ebuild 1774 RMD160 67b05f96f3c923560f42a2e27cce148259f35157 SHA1 8ebef1912dbb6e4abf0c06a350be4657c5d1e781 SHA256 e8717b9ad2d244f3eb9e6539a71614a30a6db0929a0ddb6bf9ea1765e2af85a7
 EBUILD audacious-2.4.1.ebuild 1755 RMD160 9c5908fa796f613f69165c15dc38b43ce57c5aa8 SHA1 21a388ebea87643d0599ecf5633f9b0a21077ff9 SHA256 16acd26485cffa40a3f03a2839a9bdcce39f9a71a3c5e5170c69c975b05f8230
 EBUILD audacious-2.4.2.ebuild 1755 RMD160 63675f3a88ef047dfe926f2b09c0a2a32ecd9703 SHA1 a932b7dda9abc58b5e631b6a166cb8360402593f SHA256 5a9d54db1024fcfcb2f5ef7bbcfdcfc67626cc4ad6fe7fdaa7b6bc14e1a1e227
-MISC ChangeLog 38033 RMD160 630ae20b28f589a7802675f122ad36e6056837ff SHA1 0202001d1847650ed9df420fe962a081b0d2eb4b SHA256 bace6162ce2e6b2c6558d56a9e75b34e2710da5487e71c21af33547d04c55d21
+EBUILD audacious-2.4.3.ebuild 1755 RMD160 210c7e7cb512659e6e3e656cf33f3c3d98b40da0 SHA1 d6af8f99708984a8936dbb985d54f6bf7c907898 SHA256 2005bf45d682a529314384a3c6fb2aff9fe6187b37994b44d0faef09db51ecc8
+MISC ChangeLog 38185 RMD160 662c66f2ca1ecc2d4fb294a38717b3dc8592441d SHA1 8f0c60d4ca0fe29057a480661d32029a0dd70bb1 SHA256 d5c4b413355b0c1da65abd5bc83a32b57f54a3c38ad01798223dadc9e0028473
 MISC metadata.xml 363 RMD160 fba132fb7596814a0d7e42330a5703dc4afa32dc SHA1 2a77afacfd9e5628bd59bfc6332320302d3a6387 SHA256 cc833502f2ab5b13e4b22684d0f7bec07804c3aa2daccaee913297853e6e5b07
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAk0t7hgACgkQp5vW4rUFj5pl0QCfQ7ZRI24a/4gPrl6fnYFOlweD
+tXUAnjoPBPbebpvMZw9RqSPvh3S9/D4E
+=iHdU
+-----END PGP SIGNATURE-----
