@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/audacious
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/audacious/ChangeLog,v 1.219 2011/01/04 00:32:22 xmw Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/audacious/ChangeLog,v 1.220 2011/01/12 18:08:18 chainsaw Exp $
+
+*audacious-2.4.3 (12 Jan 2011)
+
+  12 Jan 2011; Tony Vroon <chainsaw@gentoo.org> +audacious-2.4.3.ebuild:
+  Version bump. Many bug fixes as usual.
 
   04 Jan 2011; Michael Weber <xmw@gentoo.org> audacious-2.2.ebuild,
   audacious-2.4.0.ebuild:
